# w8ayyy.w13scan

./: .gitignore  dockerfile  main.py  pyproject.toml  requirements.txt
W13SCAN/certs/: ca.crt  ca.pem
W13SCAN/lib/controller/: controller.py
W13SCAN/lib/core/: option.py  output.py
W13SCAN/scanners/PerFile/: ssti.py
lev/w8ayyy/w13scan/: __init__.py  w13scan.py
