[project]
name = "lev.w8ayyy.w13scan"
version = "0.1.6"
description = "w13scan扫描器"
dynamic = ["classifiers"]
requires-python = ">=3.10"
dependencies = [
    "levrt~=1.3",
    "requests>=2.28.0",
]

[[project.authors]]
name = "boy-hack"
email = "34109680@qq.com"

[project.license]
text = "MIT"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
editable-backend = "path"
includes = ["lev"]

[[tool.pdm.source]]
name = "levhub"
url = "https://__token__:${LEVHUB_TOKEN}@pypi.lev.zone/simple/"
